# films-catalog

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: hello-actions.yaml  python-checks.yaml
films-catalog/: app_lifespan.py  main.py  manage.py  stuff.py
films-catalog/api/: __init__.py  main_views.py
films-catalog/api/v1/: __init__.py
films-catalog/api/v1/auth/services/: film_storage_helper.py  redis_film_storage_helper.py  redis_tokens_helper.py  redis_users_helper.py  tokens_helper.py  users_helper.py
films-catalog/api/v1/films/: crud.py  redis_adapter.py  views.py
films-catalog/api/v1/films/dependencies/: utils.py
films-catalog/api/v1/films/views/: details_views.py  list_views.py
films-catalog/commands/: cli.py  hello.py  tokens.py
films-catalog/core/: config.py
films-catalog/dependencies/: utils.py
films-catalog/schemas/: film.py
films-catalog/testing/: conftest.py  helpers.py
films-catalog/testing/api/: conftest.py  test_main_views.py
films-catalog/testing/api/v1/dependecies/: test_utils.py
films-catalog/testing/api/v1/films/: crud.py  test_crud.py
films-catalog/testing/api/v1/films/views/: test_details_views.py  test_list_views.py
films-catalog/testing/schemas/: test_film.py
