[project]
name = "films-catalog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi[standard]>=0.115.12",
    "pre-commit>=4.2.0",
    "redis[hiredis]>=6.0.0",
    "ruff>=0.11.6",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
# Поддерживаемые версии Python
target-version = "py313"
src = [
    "url-shortener",
]

# Максимальная длина строки
line-length = 120
indent-width = 4

# Включаемые правила
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "C90", # mccabe
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "Q",   # flake8-quotes
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "A",   # flake8-builtins
]
# Исключить определенные файлы/директории
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv",
]



[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Игнорировать неиспользуемые импорты в init файлах
"**/test_*.py" = [
    "S311", # S311 Standard pseudo-random generators are not suitable for cryptographic purposes
    "S101", # Use of assert detected
]


[tool.ruff.lint.isort]
known-first-party = ["films-catalog"]

[tool.ruff.format]
# Всегда использовать кавычки одного типа
quote-style = "double"
# Отступы - 4 пробела
indent-style = "space"
line-ending = "auto"
